k8s-frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gymentry-frontend
  namespace: gymentry
  labels:
    app: gymentry
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gymentry-frontend
  template:
    metadata:
      labels:
        app: gymentry-frontend
    spec:
      containers:
        - name: gymentry-frontend
          image: gymentry-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 1
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: gymentry-frontend
  namespace: gymentry
  labels:
    app: gymentry-frontend
spec:
  type: ClusterIP
  selector:
    app: gymentry-frontend
  ports:
    - port: 80
      protocol: TCP
