k8s-redis-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: gymentry
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: gymentry
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
