k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: gymentry
spec:
  ingressClassName: nginx
  rules:
    - host: app.gymentry.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gymentry-frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: gymentry
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: app.gymentry.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/(.*)
            backend:
              service:
                name: gymentry-app-service
                port:
                  number: 8080
